src/components/Carts/style.scss
@import "@/src/app/shortSyles.scss";

// Skin Card
.skin-card {
  @include flex(flex-start, center);
  @include f-direction(column);

  width: 44dvw;
  gap: 10px;

  background-color: var(--color-surface);
  color: var(--color-text-primary);
  border-radius: 5px;

  transition: all 0.3s ease-in-out;

  .skin-info {
    @include flex(flex-start, center);
    @include f-direction(column);

    width: 100%;
    gap: 10px;
    padding: 0 10px 10px 10px;

    .top-box {
      @include flex(flex-start, center);
      @include f-direction(column);

      width: 100%;
      gap: 5px;

      .skin-name-box {
        @include flex(flex-start, center);
        @include f-direction(row);

        width: 100%;
        height: 30px;

        .skin-name,
        .startrack {
          @include p-montserrat-12-125-medium;
        }
      }

      .price-float-box {
        @include flex(space-between, center);
        @include f-direction(row);

        width: 100%;

        .price {
          @include flex(flex-start, center);
          gap: 5px;

          .price-value {
            @include p-montserrat-16-125-bold;
            color: var(--color-text-primary);
          }
        }

        .float {
          @include p-montserrat-8-125-regular;
          color: var(--color-text-secondary);
        }
      }
    }

    .bottom-box {
      @include flex(flex-start, center);
      @include f-direction(column);

      gap: 5px;
      width: 100%;
    }
  }
}

// Task Card
.task-card {
  @include flex(flex-start, center);
  @include f-direction(row);
  background-color: var(--color-surface);
  color: var(--color-text-primary);
  border-radius: 5px;

  width: 100%;
  gap: 15px;
  padding: 10px;

  transition: all 0.3s ease-in-out;

  .task-icon {
    img {
      width: 60px;
      height: 60px;
    }
  }

  .task-details {
    @include flex(center, flex-start);
    @include f-direction(column);
    gap: 5px;

    .task-name {
      @include p-montserrat-14-125-medium;
      color: var(--color-text-primary);
    }

    .reward-count-box {
      @include flex(flex-start, center);
      @include f-direction(row);
      gap: 5px;

      .reward-count {
        @include p-montserrat-16-125-bold;
        color: var(--color-text-primary);
      }
    }
  }
}

// Referal Card
.referal-card {
  @include flex(flex-start, center);
  @include f-direction(row);
  background-color: var(--color-surface);
  color: var(--color-text-primary);
  border-radius: 5px;

  width: 100%;
  gap: 15px;
  padding: 10px;

  transition: all 0.3s ease-in-out;

  .task-icon {
    img {
      width: 60px;
      height: 60px;
    }
  }

  .referal-details {
    @include flex(center, flex-start);
    @include f-direction(column);
    gap: 5px;

    .referal-name {
      @include p-montserrat-14-125-medium;
      color: var(--color-text-primary);
    }

    .reward-count-box {
      @include flex(flex-start, center);
      @include f-direction(row);
      gap: 5px;

      .reward-count {
        @include p-montserrat-16-125-bold;
        color: var(--color-text-primary);
      }
    }
  }
}

